apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'

sourceCompatibility = 1.7
version = '1.0'
jar {
  manifest {
    attributes 'Implementation-Title': 'Budget View', 'Implementation-Version': version
  }
}

repositories {
  mavenCentral()
}

idea {
  module {
    // Download associated Javadoc files for dependencies.
    // Default value is false.
    downloadJavadoc = true
    // Download associated source files for dependencies.
    // Default value is true.
    downloadSources = true
    // Set which directories to exclude.
    excludeDirs += file('.settings')
    // Set specific JDK for this module, or use the value 'inherited'
    // to use project JDK. Default value is 'inherited'.
    jdkName = 'inherited'
  }
}

dependencies {
  compile group: 'com.google.code.findbugs', name: 'jsr305', version: '2.+'
  compile group: 'javax.ws.rs', name: 'jsr311-api', version: '1.1.1'

  compile group: 'com.sun.jersey', name: 'jersey-server', version: '1.18.+'
  compile group: 'com.sun.jersey', name: 'jersey-core', version: '1.18.+'
  compile group: 'com.sun.jersey', name: 'jersey-servlet', version: '1.18.+'
  compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.18.+'
  compile group: 'com.sun.jersey', name: 'jersey-json', version: '1.18.+'
  compile group: 'com.sun.jersey.contribs', name: 'jersey-guice', version: '1.18.+'
  
  compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.+'
  compile 'com.fasterxml.jackson.core:jackson-core:2.4.0'
  compile 'com.fasterxml.jackson.core:jackson-databind:2.4.0'
  compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.2.+'
  compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.2.+'
  compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.2.+'
  compile group: 'org.eclipse.jetty', name: 'jetty-util', version: '9.2.+'

  compile group: 'com.google.guava', name: 'guava', version: '13.+'
  compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
  compile group: 'log4j', name: 'log4j', version: '1.2.+'

  compile group: 'org.yaml', name: 'snakeyaml', version: '1.11'
  compile group: 'org.slf4j', name: 'slf4j-api', version: '1.6.+'
  compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.+'
  compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.1.+'
  compile group: 'org.jyaml', name: 'jyaml', version: '1.+'
  testCompile group: 'junit', name: 'junit', version: '4.+'
  compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.5'
}

uploadArchives {
  repositories {
    flatDir {
      dirs 'repos'
    }
  }
}

task runTally(type: JavaExec) {
  dependsOn classes,
            files('src/resources/logback.groovy')
  description "Start tally server with src/data."
  main = 'tally.Main'
  classpath sourceSets.main.runtimeClasspath // + files(sourceSets.main.resources.srcDirs)
  maxHeapSize = '128m'
  jvmArgs '-Dlogback.configurationFile=src/resources/logback.groovy --illegal-access=warn'
  args = [ "../src/data", "summary.html",  "accounts.html" ]
}
